Fix Java 8 deprecation of Class.newInstance()